# imageQCpy

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  anonymize_test_data.py  commit_messages.md  imageQC.spec  programmers_help.md  pyproject.toml  replace_import.py  requirements.txt  search_files.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
helper_scripts/: anonymize_test_data.py  replace_import.py  search_files.py  wikidoc.py
src/imageQC/: imageQC.py  resources.py  resources.qrc  testing.py
src/imageQC/config/: config.yaml  config_classes.py  config_func.py  dcmTags.csv  iQCconstants.py  iQCconstants_functions.py  modified_scipy_io_idl.py  read_config_idl.py
src/imageQC/config_defaults/: CTnumberSensitometry.yaml  Siemens_AutoQC.yaml  cdmam.yaml  dcmTags.csv  dcmTags_idl_py.csv  tag_infos.yaml  tag_patterns_test_dcm.yaml
src/imageQC/config_defaults/CTnumberSensitometry/: Catphan500.csv  Catphan503Elekta_504Varian.csv  Catphan600.csv  Catphan700.csv
src/imageQC/config_defaults/NM_Siemens_AutoQC/: digit_templates.yaml  (+1 more)
src/imageQC/dash_app/: config_func_dash.py  dash_app.py  iQC_dash_constants.py  imageQC_dash_app.py
src/imageQC/scripts/: artifact.py  automation.py  calculate_qc.py  calculate_roi.py  cdmam_methods.py  dcm.py  digit_methods.py  input_main.py  input_main_auto.py  input_main_no_gui.py  mini_methods.py  mini_methods_calculate.py  mini_methods_format.py  mtf_methods.py  nm_methods.py  phantom_xray_methods.py  read_vendor_QC_reports.py
src/imageQC/ui/: automation_wizard.py  generate_report.py  messageboxes.py  open_automation.py  open_multi.py  plot_widgets.py  rename_dicom.py  reusable_widgets.py  reusables.py  settings.py  settings_automation.py  settings_dicom_tags.py  settings_digits.py  settings_paramsets.py  settings_reusables.py  settings_vendor.py  tag_patterns.py  task_based_image_quality.py  ui_dialogs.py  ui_image_canvas.py  ui_main.py  ui_main_image_widgets.py  ui_main_left_side.py  ui_main_methods.py  ui_main_quicktest_paramset_select.py  ui_main_result_tabs.py  ui_main_test_tabs.py  ui_main_test_tabs_vendor.py  ui_test_tabs.py
tests/: __init__.py  temp_test_auto.py  test_auto.py  test_automation.py  test_calculations.py  test_gui.py  test_main_window_gui.py  test_open_dialogs.py  test_read_config_idl.py  test_read_vendor_QC_reports.py  test_rename_dicom.py  test_simulate.py
tests/test_inputs/: dummy_rename_test2.dcm
tests/test_inputs/MR/: ACR.dcm  MR_PIQT_oneframe.dcm  MR_water_uncentered.dcm
tests/test_inputs/NM/: WB_scanspeed.dcm  barphantom.dcm  edge_det1.dcm  edge_det2.dcm  linesource_planar.dcm  linesource_tomo_recon.dcm
tests/test_inputs/SPECT/: linesource_tomo_recon.dcm
(+67 files in other folders)
