[metadata]
name = imageQC
version = 3.1.25
description = Analysing QC images from CT, xray, gamma camera, PET and MRI.
long_description = file: README.md
keywords = medical images, quality control, constancy, dicom
license = GNU General Public License v2.0
license_files = LICENSE.txt
author = Ellen Wasbo
author-email = ellen.wasbo@sus.no
classifiers = 
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
	=src
packages=find:
install_requires = 
	flask==3.0.3
	dash==2.17.0
	dash_bootstrap_components==1.6.0
	matplotlib>=3.5.2
	numpy>=1.22, <2.0
	pandas
	pdfplumber
	pydicom
	PyQt5
	PyYAML
	scikit_image
	scipy>=1.10.0
	waitress
	werkzeug==3.0.6

[options.package_data]
* = *.txt, *.md

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    imageQC = imageQC.imageQC:main