[metadata]
name = imageQC
version = 3.2.1
description = Analysing QC images from CT, xray, gamma camera, PET and MRI.
long_description = file: README.md
keywords = medical images, quality control, constancy, dicom
license = GNU General Public License v2.0
license_files = LICENSE.txt
author = Ellen Wasbo
author-email = ellen.wasbo@sus.no
classifiers = 
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
	=src
packages=find:
install_requires = 
	matplotlib==3.10.5
	numpy==2.3.2
	pandas==2.2.3
	pdfplumber==0.11.7
	pydicom==3.0.1
	PyQt6==6.8.1
	PyYAML==6.0.2
	scikit_image==0.25.2
	scipy==1.16.1

[options.package_data]
* = *.txt, *.md

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    imageQC = imageQC.imageQC:main